landing page & result section

--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -1,15 +1,16 @@
 .container {
-    width: 640px;
+    width: 900px;
     margin: auto;
-    margin-top: 150px;
-    background: white;
+    margin-top: 15px;
+    background: rgb(224, 214, 214);
     color: #262626;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    border-radius: 10px;
+    border-radius: 80px;
     padding: 40px 50px;
 }
+
 
 .container hr {
     height: 2px;
@@ -25,13 +26,15 @@
 .container ul li {
     display: flex;
     align-items: center;
-    height: 70px;
+    height: 50px;
     padding-left: 15px;
     border: 1px solid #686868;
     border-radius: 8px;
     margin-bottom: 20px;
     font-size: 20px;
     cursor: pointer;
+    color: #171817;
+    font-weight: 300;
 }
 
 .container button {
@@ -52,11 +55,11 @@
 }
 
 .container .correct {
-    background: #dffff2;
-    border-color: #00d397;
+    background: #94d7bc;
+    border-color: #171817;
 }
 
 .container .wrong {
-    background: #FFEBEB;
-    border-color: #FF4A4A;
+    background: #c48484;
+    border-color: #716d6d;
 }
