--- a/src/Components/LoginSignup/LoginSignup.css
+++ b/src/Components/LoginSignup/LoginSignup.css
@@ -1,13 +1,16 @@
-.container{
-    display:flex ;
+.container {
+    display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 200px;
-    width: 600px;
-    background: #fff;
+    margin-top: 100px;
+    width: 900px;
+    background: #c6a8a8;
     padding-bottom: 30px;
 }
-.header{
+
+
+
+.header {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,61 +18,73 @@
     width: 100%;
     margin-top: 30px;
 }
-.text{
+
+.text {
     color: #3c009d;
     font-size: 48px;
     font-weight: 700;
 }
-.underline{
+
+.underline {
     width: 61px;
     height: 6px;
-    background:#3c009d;
+    background: #3c009d;
     border-radius: 9px;
 }
-.inputs{
-  margin-top: 55px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+
+.inputs {
+    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
-.input{
+
+.input {
     display: flex;
     align-items: center;
     margin: auto;
     width: 480px;
-    height:80px;
+    height: 80px;
     background: #eaeaea;
     border-radius: 6px;
 }
-.input img{
-    margin:0px 30px;
+
+.input img {
+    margin: 0px 30px;
 }
+
 .input input {
-        height: 50px;
-        width: 400px;
-        background: transparent;
-        border: none;
-        outline: none;
-        color: #797979;
-        font-size: 19px;
-}
-.forgot-password{
-    padding: 62px;
-    margin-top: 27px;
+    height: 50px;
+    width: 400px;
+    background: transparent;
+    border: none;
+    outline: none;
     color: #797979;
+    font-size: 19px;
+}
+
+.forgot-password {
+    padding: 62px;
+    /* margin-top: 10px; */
+    margin-left: 200px;
+    color: black;
+    font-weight: 300;
     font-size: 18px;
-    }
-.forgot-password span{
+}
+
+.forgot-password span {
     color: #3c009d;
     cursor: pointer;
 }
-.submit-container{
+
+.submit-container {
     display: flex;
     gap: 30px;
     margin: 60px auto;
 
 }
-.submit{
+
+.submit {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -82,7 +97,8 @@
     font-weight: 700;
     cursor: pointer;
 }
-.gray{
+
+.gray {
     background: #EAEAEA;
     color: #676767;
 }
